--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - run: cat output.txt
+      - run: cat  ~/ output.txt
       - attach_workspace:
           at: ~/
  
